[gd_scene load_steps=57 format=3 uid="uid://c7suwadvx3qmk"]

[ext_resource type="Theme" uid="uid://bfsl6ehejxbjf" path="res://Scenes/Menus/default_theme.tres" id="1_penys"]
[ext_resource type="Script" uid="uid://ccl2rh1mb4h6r" path="res://Scenes/Menus/main_menu.gd" id="2_aur2u"]
[ext_resource type="Texture2D" uid="uid://dwh5fmo3mbjf1" path="res://Scenes/GlassSea/Batch/sprite.png" id="3_aur2u"]
[ext_resource type="AudioStream" uid="uid://d171vabi353yx" path="res://Music and Sounds/Menu Move.wav" id="4_5wi6m"]
[ext_resource type="AudioStream" uid="uid://u5qtpuwuuksx" path="res://Music and Sounds/Menu Select.wav" id="5_chkef"]

[sub_resource type="AtlasTexture" id="AtlasTexture_aur2u"]
atlas = ExtResource("3_aur2u")
region = Rect2(0, 0, 130, 73)

[sub_resource type="AtlasTexture" id="AtlasTexture_5wi6m"]
atlas = ExtResource("3_aur2u")
region = Rect2(130, 0, 130, 73)

[sub_resource type="AtlasTexture" id="AtlasTexture_chkef"]
atlas = ExtResource("3_aur2u")
region = Rect2(260, 0, 130, 73)

[sub_resource type="AtlasTexture" id="AtlasTexture_neey8"]
atlas = ExtResource("3_aur2u")
region = Rect2(390, 0, 130, 73)

[sub_resource type="AtlasTexture" id="AtlasTexture_4fgt5"]
atlas = ExtResource("3_aur2u")
region = Rect2(520, 0, 130, 73)

[sub_resource type="AtlasTexture" id="AtlasTexture_j4kqa"]
atlas = ExtResource("3_aur2u")
region = Rect2(650, 0, 130, 73)

[sub_resource type="AtlasTexture" id="AtlasTexture_anmaw"]
atlas = ExtResource("3_aur2u")
region = Rect2(780, 0, 130, 73)

[sub_resource type="AtlasTexture" id="AtlasTexture_ftsii"]
atlas = ExtResource("3_aur2u")
region = Rect2(910, 0, 130, 73)

[sub_resource type="AtlasTexture" id="AtlasTexture_lg1h6"]
atlas = ExtResource("3_aur2u")
region = Rect2(0, 73, 130, 73)

[sub_resource type="AtlasTexture" id="AtlasTexture_80s4p"]
atlas = ExtResource("3_aur2u")
region = Rect2(130, 73, 130, 73)

[sub_resource type="AtlasTexture" id="AtlasTexture_6t1rs"]
atlas = ExtResource("3_aur2u")
region = Rect2(260, 73, 130, 73)

[sub_resource type="AtlasTexture" id="AtlasTexture_0xbgx"]
atlas = ExtResource("3_aur2u")
region = Rect2(390, 73, 130, 73)

[sub_resource type="AtlasTexture" id="AtlasTexture_8dws6"]
atlas = ExtResource("3_aur2u")
region = Rect2(520, 73, 130, 73)

[sub_resource type="AtlasTexture" id="AtlasTexture_s0gno"]
atlas = ExtResource("3_aur2u")
region = Rect2(650, 73, 130, 73)

[sub_resource type="AtlasTexture" id="AtlasTexture_8bdjp"]
atlas = ExtResource("3_aur2u")
region = Rect2(780, 73, 130, 73)

[sub_resource type="AtlasTexture" id="AtlasTexture_fx838"]
atlas = ExtResource("3_aur2u")
region = Rect2(910, 73, 130, 73)

[sub_resource type="AtlasTexture" id="AtlasTexture_0rh2w"]
atlas = ExtResource("3_aur2u")
region = Rect2(0, 146, 130, 73)

[sub_resource type="AtlasTexture" id="AtlasTexture_ou7d0"]
atlas = ExtResource("3_aur2u")
region = Rect2(130, 146, 130, 73)

[sub_resource type="AtlasTexture" id="AtlasTexture_47bqg"]
atlas = ExtResource("3_aur2u")
region = Rect2(260, 146, 130, 73)

[sub_resource type="AtlasTexture" id="AtlasTexture_cflx4"]
atlas = ExtResource("3_aur2u")
region = Rect2(390, 146, 130, 73)

[sub_resource type="AtlasTexture" id="AtlasTexture_hg3ot"]
atlas = ExtResource("3_aur2u")
region = Rect2(520, 146, 130, 73)

[sub_resource type="AtlasTexture" id="AtlasTexture_h56lv"]
atlas = ExtResource("3_aur2u")
region = Rect2(650, 146, 130, 73)

[sub_resource type="AtlasTexture" id="AtlasTexture_e57l0"]
atlas = ExtResource("3_aur2u")
region = Rect2(780, 146, 130, 73)

[sub_resource type="AtlasTexture" id="AtlasTexture_bwyy1"]
atlas = ExtResource("3_aur2u")
region = Rect2(910, 146, 130, 73)

[sub_resource type="AtlasTexture" id="AtlasTexture_ef2r8"]
atlas = ExtResource("3_aur2u")
region = Rect2(0, 219, 130, 73)

[sub_resource type="AtlasTexture" id="AtlasTexture_1ih0d"]
atlas = ExtResource("3_aur2u")
region = Rect2(0, 219, 130, 73)

[sub_resource type="AtlasTexture" id="AtlasTexture_m71hm"]
atlas = ExtResource("3_aur2u")
region = Rect2(910, 146, 130, 73)

[sub_resource type="AtlasTexture" id="AtlasTexture_8ldpj"]
atlas = ExtResource("3_aur2u")
region = Rect2(780, 146, 130, 73)

[sub_resource type="AtlasTexture" id="AtlasTexture_4ttci"]
atlas = ExtResource("3_aur2u")
region = Rect2(650, 146, 130, 73)

[sub_resource type="AtlasTexture" id="AtlasTexture_2v6gi"]
atlas = ExtResource("3_aur2u")
region = Rect2(520, 146, 130, 73)

[sub_resource type="AtlasTexture" id="AtlasTexture_4rctu"]
atlas = ExtResource("3_aur2u")
region = Rect2(390, 146, 130, 73)

[sub_resource type="AtlasTexture" id="AtlasTexture_34blk"]
atlas = ExtResource("3_aur2u")
region = Rect2(260, 146, 130, 73)

[sub_resource type="AtlasTexture" id="AtlasTexture_bucoq"]
atlas = ExtResource("3_aur2u")
region = Rect2(130, 146, 130, 73)

[sub_resource type="AtlasTexture" id="AtlasTexture_17l57"]
atlas = ExtResource("3_aur2u")
region = Rect2(0, 146, 130, 73)

[sub_resource type="AtlasTexture" id="AtlasTexture_fo00v"]
atlas = ExtResource("3_aur2u")
region = Rect2(910, 73, 130, 73)

[sub_resource type="AtlasTexture" id="AtlasTexture_i61t6"]
atlas = ExtResource("3_aur2u")
region = Rect2(780, 73, 130, 73)

[sub_resource type="AtlasTexture" id="AtlasTexture_almar"]
atlas = ExtResource("3_aur2u")
region = Rect2(650, 73, 130, 73)

[sub_resource type="AtlasTexture" id="AtlasTexture_a8li8"]
atlas = ExtResource("3_aur2u")
region = Rect2(520, 73, 130, 73)

[sub_resource type="AtlasTexture" id="AtlasTexture_0ju84"]
atlas = ExtResource("3_aur2u")
region = Rect2(390, 73, 130, 73)

[sub_resource type="AtlasTexture" id="AtlasTexture_0xfxn"]
atlas = ExtResource("3_aur2u")
region = Rect2(260, 73, 130, 73)

[sub_resource type="AtlasTexture" id="AtlasTexture_11dbi"]
atlas = ExtResource("3_aur2u")
region = Rect2(130, 73, 130, 73)

[sub_resource type="AtlasTexture" id="AtlasTexture_mcec4"]
atlas = ExtResource("3_aur2u")
region = Rect2(0, 73, 130, 73)

[sub_resource type="AtlasTexture" id="AtlasTexture_wdrey"]
atlas = ExtResource("3_aur2u")
region = Rect2(910, 0, 130, 73)

[sub_resource type="AtlasTexture" id="AtlasTexture_dihw7"]
atlas = ExtResource("3_aur2u")
region = Rect2(780, 0, 130, 73)

[sub_resource type="AtlasTexture" id="AtlasTexture_wjwwf"]
atlas = ExtResource("3_aur2u")
region = Rect2(650, 0, 130, 73)

[sub_resource type="AtlasTexture" id="AtlasTexture_eaqlq"]
atlas = ExtResource("3_aur2u")
region = Rect2(520, 0, 130, 73)

[sub_resource type="AtlasTexture" id="AtlasTexture_vh047"]
atlas = ExtResource("3_aur2u")
region = Rect2(390, 0, 130, 73)

[sub_resource type="AtlasTexture" id="AtlasTexture_shj6d"]
atlas = ExtResource("3_aur2u")
region = Rect2(260, 0, 130, 73)

[sub_resource type="AtlasTexture" id="AtlasTexture_isbpt"]
atlas = ExtResource("3_aur2u")
region = Rect2(130, 0, 130, 73)

[sub_resource type="AtlasTexture" id="AtlasTexture_o87uu"]
atlas = ExtResource("3_aur2u")
region = Rect2(0, 0, 130, 73)

[sub_resource type="SpriteFrames" id="SpriteFrames_penys"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_aur2u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5wi6m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_chkef")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_neey8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4fgt5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_j4kqa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_anmaw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ftsii")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lg1h6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_80s4p")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6t1rs")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0xbgx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8dws6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_s0gno")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8bdjp")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fx838")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0rh2w")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ou7d0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_47bqg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cflx4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hg3ot")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h56lv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_e57l0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bwyy1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ef2r8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1ih0d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m71hm")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8ldpj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4ttci")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2v6gi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_4rctu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_34blk")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bucoq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_17l57")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fo00v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i61t6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_almar")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_a8li8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0ju84")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0xfxn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_11dbi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mcec4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wdrey")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_dihw7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wjwwf")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_eaqlq")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vh047")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_shj6d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_isbpt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o87uu")
}],
"loop": true,
"name": &"Sea",
"speed": 8.0
}]

[node name="MainMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme = ExtResource("1_penys")
script = ExtResource("2_aur2u")

[node name="AnimatedSprite2D2" type="AnimatedSprite2D" parent="."]
position = Vector2(160, 92)
scale = Vector2(2.58461, 2.73973)
sprite_frames = SubResource("SpriteFrames_penys")
animation = &"Sea"
autoplay = "Sea"
frame_progress = 0.900401
metadata/_edit_group_ = true

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 32
theme_override_constants/margin_top = 32
theme_override_constants/margin_right = 32
theme_override_constants/margin_bottom = 32

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="MarginContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(1, 0.498039, 1, 1)
theme_override_font_sizes/font_size = 20
text = "Journey to 
the West 2077"
horizontal_alignment = 1
vertical_alignment = 1

[node name="ButtonsVBox" type="VBoxContainer" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 10

[node name="StartGameButton" type="Button" parent="MarginContainer/VBoxContainer/ButtonsVBox"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
focus_neighbor_top = NodePath("../QuitGameButton")
focus_neighbor_bottom = NodePath("../QuitGameButton")
focus_next = NodePath("../QuitGameButton")
focus_previous = NodePath("../QuitGameButton")
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 14
text = "Start Game"

[node name="QuitGameButton" type="Button" parent="MarginContainer/VBoxContainer/ButtonsVBox"]
layout_mode = 2
size_flags_horizontal = 4
size_flags_vertical = 4
focus_neighbor_top = NodePath("../StartGameButton")
focus_neighbor_bottom = NodePath("../StartGameButton")
focus_next = NodePath("../StartGameButton")
focus_previous = NodePath("../StartGameButton")
theme_override_constants/outline_size = 5
theme_override_font_sizes/font_size = 14
text = "Exit"

[node name="MenuMoveSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("4_5wi6m")

[node name="MenuSelectSound" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource("5_chkef")

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ButtonsVBox/StartGameButton" to="." method="_on_start_game_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/ButtonsVBox/QuitGameButton" to="." method="_on_quit_button_pressed"]
